# NetherLink-static

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resources.qrc
app/frame/: ApplicationBar.cpp  ApplicationBar.h  ApplicationBarItem.cpp  ApplicationBarItem.h  DefaultPage.cpp  DefaultPage.h  MainWindow.cpp  MainWindow.h  NetherLinkCreditsWindow.cpp  NetherLinkCreditsWindow.h  NotificationManager.cpp  NotificationManager.h  SettingsWindow.cpp  SettingsWindow.h
app/state/: CurrentUser.cpp  CurrentUser.h  CurrentUserProfile.h  CurrentUserProfileRepository.cpp  CurrentUserProfileRepository.h
components/include/: CustomScrollArea.h  FloatingInputBar.h  LineEditComponent.h  OverlayScrollListView.h  ScrollAreaNoWheel.h  SmoothScrollBar.h  SmoothScrollWidget.h  TopSearchWidget.h  TransparentMenu.h
components/src/: CustomScrollArea.cpp  CustomTooltip.cpp  LineEditComponent.cpp  ScrollAreaNoWheel.cpp  ScrollBarThumb.cpp  SmoothScrollBar.cpp  SmoothScrollWidget.cpp  TopSearchWidget.cpp  TransparentMenu.cpp
data/include/: AiChatRepository.h  CurrentUser.h  GroupRepository.h  MessageRepository.h  PostRepository.h  UserRepository.h
data/src/: AiChatRepository.cpp  GroupRepository.cpp  MessageRepository.cpp  PostRepository.cpp  UserRepository.cpp
entity/: ChatMessage.h  Post.h  RepositoryTypes.h
features/aichat/data/: AiChatRepository.cpp  AiChatRepository.h  AiChatStreamClient.cpp  AiChatStreamClient.h
features/aichat/model/: AiChatListModel.cpp  AiChatListModel.h  AiChatMessageListModel.cpp  AiChatMessageListModel.h
features/aichat/ui/: AiChatApplication.cpp  AiChatApplication.h  AiChatConversationWidget.cpp  AiChatConversationWidget.h  AiChatFloatingInputBar.cpp  AiChatFloatingInputBar.h  AiChatListDelegate.cpp  AiChatListDelegate.h  AiChatListWidget.cpp  AiChatListWidget.h  AiChatMessageDelegate.cpp  AiChatMessageDelegate.h  AiChatMessageListView.cpp  AiChatMessageListView.h  AiChatSessionController.cpp  AiChatSessionController.h
features/chat/data/: GroupRepository.cpp  GroupRepository.h  MessageRepository.cpp  MessageRepository.h
features/chat/model/: ChatListModel.cpp  ChatListModel.h  MessageListModel.cpp  MessageListModel.h
features/chat/ui/: ChatArea.cpp  ChatArea.h  ChatItemDelegate.cpp  ChatItemDelegate.h  ChatListView.cpp  ChatListView.h  ChatSessionController.cpp  ChatSessionController.h  ConversationInfoPanel.cpp  ConversationInfoPanel.h  MessageApplication.cpp  MessageApplication.h  MessageListDelegate.cpp  MessageListDelegate.h  MessageListWidget.cpp  MessageListWidget.h  NewMessageNotifier.cpp  NewMessageNotifier.h
features/friend/data/: FriendNotificationRepository.cpp  FriendNotificationRepository.h  GroupNotificationRepository.cpp  GroupNotificationRepository.h  UserRepository.cpp  UserRepository.h
features/friend/model/: FriendListModel.cpp  FriendListModel.h  FriendNotificationListModel.cpp  FriendNotificationListModel.h  GroupListModel.cpp  GroupListModel.h  GroupNotificationListModel.cpp  GroupNotificationListModel.h
features/friend/ui/: FriendApplication.cpp  FriendApplication.h  FriendDetailPage.cpp  FriendDetailPage.h  FriendListDelegate.cpp  FriendListDelegate.h  FriendListWidget.cpp  FriendListWidget.h  FriendNotificationDelegate.cpp  FriendNotificationDelegate.h  FriendNotificationListWidget.cpp  FriendNotificationListWidget.h  FriendNotificationPage.cpp  FriendNotificationPage.h  FriendSessionController.cpp  FriendSessionController.h  GroupDetailPage.cpp  GroupDetailPage.h  GroupListDelegate.cpp  GroupListDelegate.h  GroupListWidget.cpp  GroupListWidget.h  GroupNotificationDelegate.cpp  GroupNotificationDelegate.h  GroupNotificationListWidget.cpp  GroupNotificationListWidget.h  GroupNotificationPage.cpp  GroupNotificationPage.h
features/post/data/: PostCommentRepository.cpp  PostCommentRepository.h  PostRepository.cpp  PostRepository.h
features/post/model/: PostDetailListModel.cpp  PostDetailListModel.h  PostFeedModel.cpp  PostFeedModel.h
features/post/ui/: PostApplication.cpp  PostApplication.h  PostApplicationBar.cpp  (+18 more)
platform/: SystemWindow.cpp  SystemWindow.h
platform/macos/: MacFloatingInputBarBridge.mm  MacFloatingInputBarBridge_p.h  MacPostBarBridge.mm  MacPostBarBridge_p.h  MacStyledActionMenuBridge.mm  MacStyledActionMenuBridge_p.h  MacWindowBridge.mm  MacWindowBridge_p.h
ref/: FramelessWindow.cpp  FramelessWindow.h  WindowEffect.cpp  WindowEffect.h
resources/shaders/: floating_input_blur.frag  floating_input_liquid_glass.frag  qt_fallback_liquid_glass.frag  qt_fallback_liquid_glass.vert  qt_fallback_liquid_glass_blur.frag
shared/data/: RepositoryTemplate.h  UnreadStateRepository.cpp  UnreadStateRepository.h
shared/services/: AudioService.cpp  AudioService.h  ImageService.cpp  ImageService.h
shared/theme/: ThemeColorPalette.cpp  ThemeColorPalette.h  ThemeManager.cpp  ThemeManager.h
shared/types/: ChatMessage.h  FriendNotification.h  Group.h  GroupNotification.h  Post.h  RepositoryTypes.h  User.h
shared/ui/: BadgeRenderer.cpp  BadgeRenderer.h  ClickableLabel.cpp  ClickableLabel.h  CustomTooltip.cpp  CustomTooltip.h  FastGaussianBlur.cpp  FastGaussianBlur.h  FloatingInputBar.cpp  FloatingInputBar.h  GlobalNotification.cpp  GlobalNotification.h  IconLineEdit.cpp  IconLineEdit.h  InlineEditableText.cpp  InlineEditableText.h  MinecraftButton.cpp  MinecraftButton.h  MinecraftSlider.cpp  MinecraftSlider.h  OverlayScrollArea.cpp  OverlayScrollArea.h  OverlayScrollListView.cpp  OverlayScrollListView.h  PaintedLabel.cpp  PaintedLabel.h  QtFallbackLiquidGlass.cpp  QtFallbackLiquidGlass.h  RedstoneLampSwitch.cpp  RedstoneLampSwitch.h  ScrollBarThumb.h  SelectableText.cpp  SelectableText.h  SmoothScrollBar.cpp  SmoothScrollBar.h  StatefulPushButton.cpp  StatefulPushButton.h  StyledActionMenu.cpp  StyledActionMenu.h  TransparentSplitter.cpp  (+3 more)
utils/include/: FramelessWindow.h  ImageService.h  MacWindowEffects_p.h  SystemWindow.h  WindowEffect.h  imagemanager.cpp  imagemanager.h
utils/src/: FramelessWindow.cpp  ImageService.cpp  MacWindowBridge.mm  MacWindowEffects.mm  SystemWindow.cpp  WindowEffect.cpp
(+68 files in other folders)
